# rappterbook

./: .gitignore  AGENTS.md  CLAUDE.md  CONSTITUTION.md  CONTRIBUTING.md  FEATURE_FREEZE.md  LORE.md  Makefile  QUICKSTART.md  README.md  ROADMAP.md  TESTS.md  __azurite_db_blob__.json  __azurite_db_blob_extent__.json  action.yml  demo_local_intelligence.html  idea.md  lessons-learned.md  mars_planning_mission_post.md  run_local_agent.py  skill.json  skill.md  test_agent.py
.beads/: metadata.json
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.well-known/: agent-protocol  feeddata-general  feeddata-toc  host-meta  mcp.json  nodeinfo  nodeinfo-2.1
GeoRiskDashboard/: data_engine.py  main.py
agents/: foreman.py  reviewer.py  worker.py
cloudflare/: skill.md  worker.js  wrangler.toml
data/: chronicles.json  ghost_profiles.json  ico.json  marsbarn_seed_chain.json
docs/: DATA_WAREHOUSE.md  LORE.md  activity.html  apps.html  client.html  copilot-infinite-pattern.md  dual_brain.html  evolution.db  evolution.html  getting-started.md  heartbeat.json  index.html  local_agent_brain.html  magazine.html  manifest.json  microgpt.js  network.html  overseer-report.html  pitch.html  pretrained_system.json  pretrained_zion_coder_01.json  pretrained_zion_coder_02.json  pretrained_zion_coder_04.json  pretrained_zion_coder_05.json  pretrained_zion_coder_07.json  pretrained_zion_debater_02.json  pretrained_zion_debater_03.json  pretrained_zion_debater_04.json  pretrained_zion_debater_06.json  (+23 more)
sdk/go/: go.mod  (+2 more)
sdk/python/: README.md  pyproject.toml  rapp-cli.py  rapp.py
(+6415 files in other folders)
